After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708479 - Bluetooth icon not shown even when in use
Bluetooth icon not shown even when in use
Status: RESOLVED FIXED
Product: gnome-bluetooth
Classification: Core
Component: applet
3.9.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-bluetooth-general-maint@gnome.bugs
gnome-bluetooth-general-maint@gnome.bugs
Depends on:
Blocks: 708541
 
 
Reported: 2013-09-20 17:50 UTC by Bastien Nocera
Modified: 2013-09-22 20:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
applet: Fix the Bluetooth status icon not appearing (2.06 KB, patch)
2013-09-21 14:33 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2013-09-20 17:50:40 UTC
https://raw.github.com/gnome-design-team/gnome-mockups/master/shell/system-menu/combined-system-status-menu-v4-overview.png says that it's supposed to show a Bluetooth icon when it's used.

I have a Bluetooth mouse connected to the machine, and the icon doesn't show up.
Comment 1 Giovanni Campagna 2013-09-20 20:42:37 UTC
Uhm, can you run from the lg

Main.panel.statusArea.aggregateMenu._bluetooth._applet.get_devices().filter(function(d) { return d.connected })

If something appears there, it's a gnome-shell bug. Otherwise it's a gnome-bluetooth problem.
Comment 2 Bastien Nocera 2013-09-21 14:18:14 UTC
r(0) = 

connected is indeed false for the first and only device, even though:
Device: Apple wireless trackpad (D8:A2:5E:F9:4A:8C)
	D-Bus Path: /org/bluez/hci0/dev_D8_A2_5E_F9_4A_8C
	Type: Tablet Icon: input-tablet
	Paired: True Trusted: True Connected: True
	UUIDs: HumanInterfaceDeviceService 


Looks like the bluetooth-applet.c connected handling is broken (there's no "Connectable" services anymore in BlueZ 5).
Comment 3 Bastien Nocera 2013-09-21 14:33:41 UTC
Created attachment 255484 [details] [review]
applet: Fix the Bluetooth status icon not appearing

Port the "connected" and "connectable" statuses to
BlueZ 5/GNOME 3.10. The underlying API was changed, but
our code wasn't.
Comment 4 Bastien Nocera 2013-09-21 14:35:18 UTC
Giovanni, I still don't see a "Bluetooth" section inside the menu itself. Anything that I can test to see what's up?
Comment 5 Giovanni Campagna 2013-09-22 17:49:54 UTC
Review of attachment 255484 [details] [review]:

We don't use the services hashtable anymore, you should remove it.
Comment 6 Bastien Nocera 2013-09-22 20:21:28 UTC
Attachment 255484 [details] pushed as 914c486 - applet: Fix the Bluetooth status icon not appearing