applet: Fix the Bluetooth status icon not appearing

Port the "connected" and "connectable" statuses to
BlueZ 5/GNOME 3.10. The underlying API was changed, but
our code wasn't.

https://bugzilla.gnome.org/show_bug.cgi?id=708479